--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.6",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/db": "^0.14.3",
+    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
+    "@libsql/client": "^0.14.0",
+    "astro": "^4.16.6",
+    "firebase": "^11.0.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
 }
