--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/db": "^0.14.3",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
+    "@auth/core": "^0.32.0",
     "@libsql/client": "^0.14.0",
     "astro": "^4.16.6",
+    "auth-astro": "^4.1.2",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
