--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -18,6 +18,7 @@
     "@libsql/client": "^0.14.0",
     "astro": "^4.16.6",
     "auth-astro": "^4.1.2",
+    "dependencies": "^0.0.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
