--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^4.16.6",
     "auth-astro": "^4.1.2",
     "dependencies": "^0.0.1",
+    "notyf": "^3.10.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
