--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/db": "^0.14.3",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vercel": "^7.8.2",
-    "@auth/core": "^0.32.0",
+    "@auth/core": "^0.18.6",
     "@libsql/client": "^0.14.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.16.6",
     "auth-astro": "^4.1.2",
     "dependencies": "^0.0.1",
+    "drizzle-orm": "^0.35.3",
     "notyf": "^3.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
