--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,15 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "allowJs": true,
-    "strict": false, // Disable all strict type-checking options
-    "strictNullChecks": false, // Disable strict null checks
-    "noImplicitAny": false, // Allow implicit 'any' types
-    "strictFunctionTypes": false, // Disable strict function types
-    "strictBindCallApply": false, // Disable strict bind, call, and apply checks
-    "strictPropertyInitialization": false, // Disable strict property initialization checks
-    "noImplicitThis": false, // Allow 'this' to be implicitly 'any'
-    "alwaysStrict": false // Disable 'alwaysStrict' mode
+    "strict": false,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "alwaysStrict": false,
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
