refactor code & and relative routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,15 @@
     "noImplicitThis": false,
     "alwaysStrict": false,
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["src/components/*"],
+      "@/pages/*": ["src/pages/*"],
+      "@/layouts/*" : ["src/layouts/*"],
+      "@/constants/*": ["src/constants/*"],
+      "@/interfaces/*": ["src/interfaces/*"],
+      "@/hooks/*": ["src/hooks/*"],
+    }
   }
 }
