--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^4.16.6",
     "auth-astro": "^4.1.2",
     "dependencies": "^0.0.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "notyf": "^3.10.0",
